(executable
 (name abbreviations)
 (public_name pandoc-abbreviations)
 (libraries pandoc)
 (modules abbreviations)
)

(executable
 (name crossref)
 (public_name pandoc-crossref)
 (libraries pandoc)
 (modules crossref)
)

(executable
 (name inspect)
 (public_name pandoc-inspect)
 (libraries pandoc)
 (modules inspect)
)
